OO-4556: show only published videos in LearnTube